<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/offer_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/background_offer"
    android:backgroundTint="#EB4746">

    <ImageView
        android:id="@+id/offer_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_offer_default" />

    <TextView
        android:id="@+id/offer_txt_loan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_white"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/offer_loan_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_img" />

    <TextView
        android:id="@+id/offer_txt_sum_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/offer_sum_title_default"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_txt_loan" />

    <TextView
        android:id="@+id/offer_txt_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/offer_rate_title_default"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_txt_sum_title" />

    <TextView
        android:id="@+id/offer_txt_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/offer_sum_default"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/offer_txt_sum_title"
        app:layout_constraintStart_toStartOf="@+id/offer_txt_loan"
        app:layout_constraintTop_toTopOf="@+id/offer_txt_sum_title" />

    <TextView
        android:id="@+id/offer_txt_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/offer_rate_default"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/offer_txt_rate_title"
        app:layout_constraintStart_toStartOf="@+id/offer_txt_sum"
        app:layout_constraintTop_toTopOf="@+id/offer_txt_rate_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/offer_btn_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_white"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/offer_detail"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offer_txt_rate" />
</androidx.constraintlayout.widget.ConstraintLayout>